Gnome: Fix unreadable text in calendar events

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -5503,6 +5503,16 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
   #gnc-id-main-window .arrow.button.toggle:hover {
     border-color: #0072ff; }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label {
+  color: #B6B7B9;
+  opacity: 1; }
+.week-view .color-light.timed label, .color-light label, .year-view .color-light:not(.timed) label {
+  color: #1A1E21;
+  opacity: 1; }
+
 .xfce4-panel {
   border-radius: 0; }
   .xfce4-panel.panel {
