--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -5746,6 +5746,16 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
   #gnc-id-main-window .arrow.button.toggle:hover {
     border-color: #0072ff; }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label, .color-light .event-popover label {
+  color: #B6B7B9;
+  opacity: 1; }
+.color-light label {
+  color: #1A1E21;
+  opacity: 1; }
+
 .xfce4-panel.panel {
   background-color: #191a1f;
   text-shadow: none;
